<resources>
    <string name="app_name">Notes</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="notes">Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="type_note_here">Type Note here</string>
    <string name="color_picker">Color</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="text">Night Mode</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_to_want_to_delete_this_note">Are you sure to want to delete this note</string>
</resources>
